# quantum-learn

./: .gitignore  .readthedocs.yaml  README.md  demo.py  pyproject.toml  setup.py
.github/workflows/: package.yml  python-package.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
qlearn/: __init__.py  _backends.py  _utils.py  _vqc_wrappers.py  classification.py  clustering.py  qfm.py  regression.py  vqc.py  vqc_classifier.py  vqc_regressor.py
qlearn/backends/: base.py
qlearn/pennylane/: qfm.py  vqc.py
qlearn/qiskit/: __init__.py  qfm.py  vqc.py
qmlearn/: __init__.py  qfm.py  vqc.py
tests/: helpers.py  test_classification.py  test_clustering.py  test_qfm.py  test_regression.py  test_vqc.py  test_vqc_wrappers.py
