[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-learn"
version = "2.0.0"
description = "quantum-learn: quantum machine learning in Python"
readme = "README.md"
authors = [{ name = "OsamaMIT", email = "author@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "scikit-learn",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
pennylane = ["pennylane"]
qiskit = ["qiskit"]
all = ["pennylane", "qiskit"]
